# nsu-stuff

./: .gitignore
C#-course/СoliseumProblem/: readme.md
DB tests/: test1.html  test2.html  test3.html  test4.html  test5.html  test6.html
DeepLearning(pytorch)/lab2_denoisingAutoencoder/: main.py
DeepLearning(pytorch)/lab3_GAN/: main.py
EVMPU/3/: lab3 v1.1.cpp  main.c  o1.S  o1.cpp  o2.cpp
EVMPU/4/: main.cpp
EVMPU/7/: main.cpp  matrix.cpp  matrix.h
EVMPU/8/: main.cpp
EVMPU/9/: main.cpp
EVMPU/stackUsingArray/: main.cpp
Finding-area-of-lake(practice-5th-sem)/: settings.gradle
Finding-area-of-lake(practice-5th-sem)/report/: Отчёт_Садриев_В.Д..docx
KlavaType(OOAD)/: KlavaType model.asta  build.gradle  project_report.docx  settings.gradle
MTK/lab1/: lab1.flow
MTK/lab10/: lab10.flow
MTK/lab1112/: lab11.flow  lab12.flow  nemo.flow  nemo.lingo  nemoVM.flow  translateNemo.flow
MTK/lab2/: lab2.flow
MTK/lab3/: lab3.flow
MTK/lab4/: lab4.flow
MTK/lab5/: gramm.lingo  lab5.flow
MTK/lab6/: grammar.lingo  lab6.flow
MTK/lab7/: lab7.flow
MTK/lab8/: lab8.flow
MTK/lab9/: lab9.flow
Networks/: .gitignore
Networks/lab1/: build.gradle
Networks/lab2(torrent)/: build.gradle
Networks/lab3/: build.gradle  settings.gradle
Networks/lab4/: build.gradle
OOP(C++)/Array/: main.cpp  (+1 more)
OOP(C++)/GOL-with-UI/: CMakeLists.txt  Ifield.h  engine.cpp  engine.h  game.cpp  game.h  gamewindow.cpp  gamewindow.h  io.cpp  io.h  main.cpp  renderarea.cpp  renderarea.h  rulesdialog.cpp  rulesdialog.h  sizedialog.cpp  sizedialog.h
OOP(C++)/flatmap/: CMakeLists.txt
OOP(C++)/flatmap/Google_tests/: CMakeLists.txt  FlatTests.cpp
OOP(C++)/flatmap/src/: Array.h  FlatMap.h
OOP(C++)/prisoner's-dilemma/: CMakeLists.txt  config_provider.cpp  config_provider.h  console_interface.cpp  console_interface.h  factory.h  game.cpp  game.h  game_runner.cpp  game_runner.h  io.cpp  io.h  main.cpp  strategy.h  strategy_factory.h
OOP(C++)/prisoner's-dilemma/Google_tests/: CMakeLists.txt  invalid matrix  mock_prison.h  prisoner_tests.cpp  read_functions
OOP(C++)/prisoner's-dilemma/configs/: election.txt
OOP(C++)/prisoner's-dilemma/strategies/: change.cpp  change.h  cooperate.cpp  cooperate.h  defect.cpp  defect.h  election.cpp  election.h  majority.cpp  majority.h  mimic.cpp  mimic.h  patient.cpp  patient.h  random.cpp  random.h
Philharmonia(db_project)/: data.sql  queries.sql  tables.sql
Practice docs(6th-sem)/: Садриев_Владлен_Дамирович_Прил 1_ИЗ на практику_Бакалавриат_ПИиКН_6 семестр.docx  Садриев_Владлен_Дамирович_Прил 2_Отчет о практике_Бакалавриат_ПииКН_6 семестр.docx  Садриев_Владлен_Дамирович_Прил 3_Отзыв руководителя практики_Бакалавриат_ПИиКН_6 семестр.docx
Practice(5th-sem)/: build.gradle
programming(1st-sem)/: 3b.c  Eratosfen.c  Game_of_life.c  euler_7.c
programming(2nd-sem)/: hamilton_way.c  topsort.c
programming(2nd-sem)/dijkstra/: CMakeLists.txt  graph.c  graph.h  hash_table.c  hash_table.h  main.c  queue.c  queue.h  util.c  util.h
(+709 files in other folders)
